--- a/requirements.txt
+++ b/requirements.txt
@@ -7,22 +7,28 @@ catalogue==1.0.0
 certifi==2020.6.20
 cffi==1.14.4
 chardet==3.0.4
+click==7.1.2
 cryptography==3.3.1
 cymem==2.0.5
 decorator==4.4.2
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
 gast==0.3.3
 google-auth==1.21.2
 google-auth-oauthlib==0.4.1
 google-pasta==0.2.0
 grpcio==1.32.0
+gTTS==2.2.1
 h5py==2.10.0
 idna==2.10
+joblib==1.0.0
 Keras-Preprocessing==1.1.2
 Markdown==3.2.2
 murmurhash==1.0.5
+nltk==3.5
 numpy==1.18.5
 oauthlib==3.1.0
 opt-einsum==3.3.0
+pandas==1.2.0
 plac==1.1.3
 preshed==3.0.5
 protobuf==3.13.0
@@ -30,8 +36,10 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pybind11==2.5.0
 pycparser==2.20
+python-dateutil==2.8.1
 python-telegram-bot==13.1
 pytz==2020.4
+regex==2020.11.13
 requests==2.24.0
 requests-oauthlib==1.3.0
 rsa==4.6
