--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ python-dateutil==2.8.1
 python-telegram-bot==13.1
 pytz==2020.4
 regex==2020.11.13
+reportlab==3.5.57
 requests==2.24.0
 requests-oauthlib==1.3.0
 rsa==4.6
@@ -47,6 +48,7 @@ scipy==1.4.1
 six==1.15.0
 spacy==2.3.5
 srsly==1.0.5
+svglib==1.0.1
 tensorboard==2.3.0
 tensorboard-plugin-wit==1.7.0
 tensorflow-estimator==2.3.0
